Fixed formatter for kotlin